environments/gloo-edge/edge.glooplatform.com/rollouts-demo/strategies/blue-green/base/rollouts-demo-virtualservice.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: rollouts-demo
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - '*'
    routes:
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: rollouts-demo-active
            namespace: rollouts-demo
